# plateau-mb-terrain-converter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
___cmake/: FIndPNG.cmake
cmake/: FindGDAL.cmake  FindSQLite.cmake
convertTerrainToMapboxRGB/: CMakeLists.txt  convertTerrainToMapboxRGB_main.cpp
libplateauterrainrgb/: CMakeLists.txt  CityGMLManager.cpp  CityGMLManager.h  CityGMLReader.cpp  CityGMLReader.h  CommonStruct.h  GsiGmlReader.cpp  GsiGmlReader.h  GsiTileManager.cpp  GsiTileManager.h  PlateauTileManager.cpp  PlateauTileManager.h  README.md  WTMCalculator.cpp  WTMCalculator.h  WebTileManager.cpp  WebTileManager.h  plateau-mb-terrain-converter.cpp  plateau-mb-terrain-converter.h
plateau-mb-terrain-converter/: CMakeLists.txt  CityGMLManager.cpp  CityGMLManager.h  CommonStruct.h  WTMCalculator.cpp  WTMCalculator.h  WebTileManager.cpp  WebTileManager.h  plateau-mb-terrain-converter.cpp  plateau-mb-terrain-converter.h
python_example/: README.md  convertGsiDemToMapboxRGB_python.py  convertTerrainToMapboxRGB_python.py  fill_zero_tileset_python.py  merge_tilesets_python.py  plateau2gtif_python.py
swig/: CMakeLists.txt  plateau-mb-terrain-converter.i
tools/: CMakeLists.txt  README.md  convertGsiDemToMapboxRGB_main.cpp  convertTerrainToMapboxRGB_main.cpp  fill_zero_tileset.cpp  merge_tilesets.cpp  plateau2gtif.cpp  terrain_tiles2mapbox_rgb.cpp
